# zero-determinant-trading

./: README.md  pAB.csv  pyproject.toml  r14.csv  r_3p.csv
exchange/: actions.py  exchange.py  trader.py
simulator/: exchange.py
zdt_simulator/: __init__.py  actions.py  exchange.py  trader.py
zdt_simulator/scripts/: find_estimated_payoffs.py  simulate_custom_market.py  simulate_simple_market.py
zdt_simulator/strategies/: aa_player.csv  balanced.csv  betrayer.csv  betrayer_3p.csv  betrayer_4p.csv  extort_1.csv  extort_2.csv  extort_r14c3.csv  fix_2_5.csv  fix_3.csv  neutral_3p.csv  neutral_4p.csv  random.csv  random_3p.csv  random_4p.csv
