[project]
name = "zero-determinant-trading"
version = "2023.0"
description="""Probabilistic market making simulator."""
license = "MIT"
authors = [
    { name = "Harrison R. Mouat", email = "harrison.mouat19@imperial.ac.uk" },
]
dependencies = [
    "numpy",
    
]

[project.urls]
Documentation = ""

[project.scripts]
simulate_market = "simulator.scripts.simulate_market:simulate_market"